codex-rs/tui/src/snapshots/codex_tui__status_line_command__hook_tests__five_hour_pace_preserves_status_line_styles.snap
---
source: tui/src/status_line_hook_tests.rs
expression: line
---
Line::from_iter([
    Span::from("external$ ").cyan(),
    Span::from("ctx: ").fg(Color::Rgb(153, 153, 153)),
    Span::from("▓░░░░░░░░░ 11%").fg(Color::Rgb(47, 134, 255)),
    Span::from(" | 5h: ").fg(Color::Rgb(153, 153, 153)),
    Span::from("94% ▽9.00x").fg(Color::Rgb(249, 31, 31)),
    Span::from(" ").fg(Color::Rgb(153, 153, 153)),
    Span::from("(2m)").gray(),
    Span::from(" | 7d: --").fg(Color::Rgb(153, 153, 153)),
    Span::from(" | gpt-5.6-sol xhigh ⚡ · Pragmatic").fg(Color::Rgb(153, 153, 153)),
])
