codex-rs/tui/src/snapshots/codex_tui__status_line_command__hook_tests__pace_uses_the_more_conservative_elapsed_or_remaining_view.snap
---
source: tui/src/status_line_hook_tests.rs
expression: output
---
remaining limits overspending: external$ ctx: ▓░░░░░░░░░ 11% | 5h: -- | 7d: 84% △3.42x (3d20h) | gpt-5.6-sol xhigh ⚡ · Pragmatic
elapsed limits early overspending: external$ ctx: ▓░░░░░░░░░ 11% | 5h: -- | 7d: 15% ▲2.29x (6d13h) | gpt-5.6-sol xhigh ⚡ · Pragmatic
remaining limits spare allowance: external$ ctx: ▓░░░░░░░░░ 11% | 5h: -- | 7d: 25% ▽50% (3d12h) | gpt-5.6-sol xhigh ⚡ · Pragmatic
elapsed limits spare allowance: external$ ctx: ▓░░░░░░░░░ 11% | 5h: -- | 7d: 94% ▼6% (2m) | gpt-5.6-sol xhigh ⚡ · Pragmatic
