codex-rs/tui/src/snapshots/codex_tui__status_line_command__hook_tests__reloads_show_each_expiration_in_order.snap
---
source: tui/src/status_line_hook_tests.rs
expression: output
---
repeated days: external$ ctx: ▓░░░░░░░░░ 11% | 5h: -- | 7d: -- | ↻2d, ↻7d, ↻7d | gpt-5.6-sol xhigh ⚡ · Pragmatic
whole days: external$ ctx: ▓░░░░░░░░░ 11% | 5h: -- | 7d: -- | ↻24d, ↻26d | gpt-5.6-sol xhigh ⚡ · Pragmatic
short expirations: external$ ctx: ▓░░░░░░░░░ 11% | 5h: -- | 7d: -- | ↻<1m, ↻1m, ↻59m, ↻1h, ↻23h, ↻1d | gpt-5.6-sol xhigh ⚡ · Pragmatic
expired entries: external$ ctx: ▓░░░░░░░░░ 11% | 5h: -- | 7d: -- | ↻1m | gpt-5.6-sol xhigh ⚡ · Pragmatic
